# openGL_Telescope_Model

./: .gitignore  .gitmodules  CMakeLists.txt  Main.cpp  README.md  SphereWorld.sln  SphereWorld.vcxproj  SphereWorld.vcxproj.filters  build.sh  readme.md  readme.txt  sphereworld.cbp  sphereworld.cpp
Telescope/DerivedData/Telescope/: info.plist
Telescope/Telescope/: main.cpp
Telescope/Telescope.xcodeproj/: project.pbxproj
Telescope/Telescope.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Telescope/Telescope.xcodeproj/xcuserdata/ssarcandy.xcuserdatad/xcschemes/: xcschememanagement.plist
VisualStudio/: SphereWorld.vcproj  SphereWorld.vcxproj  SphereWorld.vcxproj.filters
Xcode/Telescope/lib/: glFrame.h  glm.h  gltools.cpp
Xcode/Telescope/telescope/telescope/: main.cpp
Xcode/Telescope/telescope/telescope/lib/: glm.cpp  gltools.h
Xcode/telescope/: main.h
Xcode/telescope/telescope.xcodeproj/: project.pbxproj
Xcode/telescope/telescope.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Xcode/telescope/telescope.xcodeproj/project.xcworkspace/xcshareddata/: telescope.xccheckout
Xcode/telescope/telescope.xcodeproj/xcuserdata/ssarcandy.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Xcode/telescope/telescope.xcodeproj/xcuserdata/ssarcandy.xcuserdatad/xcschemes/: telescope.xcscheme  xcschememanagement.plist
lib/: glm.cpp  glm.h  gltools.cpp  math3d.h
src/: Drawer.h  Main.cpp  TypeDef.h
